--- a/arch/arm/configs/dior_custom_defconfig
+++ b/arch/arm/configs/dior_custom_defconfig
@@ -405,7 +405,7 @@ CONFIG_MSM_N_WAY_SMD=y
 CONFIG_MSM_N_WAY_SMSM=y
 CONFIG_MSM_SMP2P=y
 CONFIG_MSM_SMP2P_TEST=y
-CONFIG_MSM_RESET_MODEM=y
+# CONFIG_MSM_RESET_MODEM is not set
 CONFIG_MSM_SMD_LOGGING=y
 CONFIG_MSM_IPC_LOGGING=y
 CONFIG_MSM_SMD_NMEA=y
@@ -501,8 +501,7 @@ CONFIG_MSM_OCMEM_DEBUG=y
 # CONFIG_MSM_OCMEM_DEBUG_ALWAYS_ON is not set
 CONFIG_MSM_OCMEM_POWER_DISABLE=y
 CONFIG_SENSORS_ADSP=y
-CONFIG_MSM_RTB=y
-CONFIG_MSM_RTB_SEPARATE_CPUS=y
+# CONFIG_MSM_RTB is not set
 # CONFIG_MSM_EBI_ERP is not set
 # CONFIG_MSM_DCVS is not set
 # CONFIG_MSM_CPR is not set
