--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -1080,6 +1080,10 @@ config TOUCHSCREEN_IST30XX
 
           If unsure, say N.
 
+config STATE_NOTIFIER
+        bool "State Notifier"
+	default y
+
 source "drivers/input/touchscreen/gt9xx/Kconfig"
 
 endif
