--- a/arch/arm/configs/dior_custom_defconfig
+++ b/arch/arm/configs/dior_custom_defconfig
@@ -1623,6 +1623,7 @@ CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE=y
 # CONFIG_SECURE_TOUCH is not set
 CONFIG_TOUCHSCREEN_GT9XX=y
 CONFIG_TOUCHSCREEN_IST30XX=y
+CONFIG_STATE_NOTIFIER=y
 CONFIG_GT9XX_TOUCHPANEL_DRIVER=y
 CONFIG_GT9XX_TOUCHPANEL_UPDATE=y
 CONFIG_GT9XX_TOUCHPANEL_DEBUG=y
