--- a/arch/arm/configs/dior_custom_defconfig
+++ b/arch/arm/configs/dior_custom_defconfig
@@ -2196,6 +2196,7 @@ CONFIG_MSM_CSID=y
 CONFIG_MSM_EEPROM=y
 CONFIG_MSM_ISPIF=y
 # CONFIG_MSM_ISPIF_V1 is not set
+CONFIG_IMX135=y
 # CONFIG_IMX134 is not set
 CONFIG_OV9724=y
 # CONFIG_HI256 is not set
