--- a/arch/arm/configs/dior_custom_defconfig
+++ b/arch/arm/configs/dior_custom_defconfig
@@ -1533,7 +1533,7 @@ CONFIG_INPUT_MOUSEDEV_SCREEN_X=1024
 CONFIG_INPUT_MOUSEDEV_SCREEN_Y=768
 # CONFIG_INPUT_JOYDEV is not set
 CONFIG_INPUT_EVDEV=y
-CONFIG_INPUT_EVBUG=y
+# CONFIG_INPUT_EVBUG is not set
 CONFIG_INPUT_KEYRESET=y
 
 #
@@ -1639,24 +1639,24 @@ CONFIG_TOUCHSCREEN_ATMEL_MXT=y
 # CONFIG_TOUCHSCREEN_TPS6507X is not set
 # CONFIG_TOUCHSCREEN_CY8C_TS is not set
 # CONFIG_TOUCHSCREEN_CYTTSP_I2C_QC is not set
-CONFIG_TOUCHSCREEN_FT5X06=y
-CONFIG_TOUCHSCREEN_FT5X06_CALIBRATE=y
-CONFIG_TOUCHSCREEN_FT5X06_TYPEB=y
-CONFIG_TOUCHSCREEN_FT5X06_I2C=y
+# CONFIG_TOUCHSCREEN_FT5X06 is not set
+# CONFIG_TOUCHSCREEN_FT5X06_CALIBRATE is not set
+# CONFIG_TOUCHSCREEN_FT5X06_TYPEB is not set
+# CONFIG_TOUCHSCREEN_FT5X06_I2C is not set
 # CONFIG_TOUCHSCREEN_FT5X06_SPI is not set
 # CONFIG_TOUCHSCREEN_GEN_VKEYS is not set
-CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI4_DEV=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE=y
+# CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4 is not set
+# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI4_DEV is not set
+# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE is not set
 # CONFIG_SECURE_TOUCH is not set
-CONFIG_TOUCHSCREEN_GT9XX=y
-CONFIG_TOUCHSCREEN_IST30XX=y
+# CONFIG_TOUCHSCREEN_GT9XX is not set
+# CONFIG_TOUCHSCREEN_IST30XX is not set
 # CONFIG_TOUCHSCREEN_DOUBLETAP2WAKE is not set
 # CONFIG_TOUCHSCREEN_PREVENT_SLEEP is not set
 CONFIG_STATE_NOTIFIER=y
-CONFIG_GT9XX_TOUCHPANEL_DRIVER=y
-CONFIG_GT9XX_TOUCHPANEL_UPDATE=y
-CONFIG_GT9XX_TOUCHPANEL_DEBUG=y
+# CONFIG_GT9XX_TOUCHPANEL_DRIVER=y
+# CONFIG_GT9XX_TOUCHPANEL_UPDATE=y
+# CONFIG_GT9XX_TOUCHPANEL_DEBUG=y
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_BMA150 is not set
@@ -2190,7 +2190,7 @@ CONFIG_IR_LIRC_CODEC=y
 #
 # CONFIG_MSM_CAMERA is not set
 CONFIG_MSMB_CAMERA=y
-# CONFIG_MSMB_CAMERA_DEBUG is not set
+CONFIG_MSMB_CAMERA_DEBUG=y
 CONFIG_MSM_CAMERA_SENSOR=y
 CONFIG_MSM_CPP=y
 CONFIG_MSM_CCI=y
@@ -2204,17 +2204,17 @@ CONFIG_MSM_ISPIF=y
 # CONFIG_MSM_ISPIF_V1 is not set
 # CONFIG_S5K3L1YX is not set
 # CONFIG_IMX214 is not set
-CONFIG_IMX135=y
+# CONFIG_IMX135 is not set
 # CONFIG_IMX134 is not set
 # CONFIG_OV2720 is not set
-CONFIG_OV9724=y
+# CONFIG_OV9724 is not set
 # CONFIG_HI256 is not set
 CONFIG_OV5648=y
-CONFIG_MT9M114=y
+# CONFIG_MT9M114=y
 # CONFIG_SP1628 is not set
 # CONFIG_GC0339 is not set
-CONFIG_OV8825=y
-CONFIG_OV8865=y
+# CONFIG_OV8825 is not set
+# CONFIG_OV8865 is not set
 # CONFIG_s5k4e1 is not set
 CONFIG_OV12830=y
 # CONFIG_MSM_V4L2_VIDEO_OVERLAY_DEVICE is not set
@@ -3728,3 +3728,4 @@ CONFIG_NLATTR=y
 # CONFIG_CORDIC is not set
 CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
+
