--- a/arch/arm/configs/dior_custom_defconfig
+++ b/arch/arm/configs/dior_custom_defconfig
@@ -2209,14 +2209,14 @@ CONFIG_MSM_ISPIF=y
 # CONFIG_OV2720 is not set
 # CONFIG_OV9724 is not set
 # CONFIG_HI256 is not set
-CONFIG_OV5648=y
-# CONFIG_MT9M114=y
+# CONFIG_OV5648 is not set
+# CONFIG_MT9M114 is not set
 # CONFIG_SP1628 is not set
 # CONFIG_GC0339 is not set
 # CONFIG_OV8825 is not set
 # CONFIG_OV8865 is not set
 # CONFIG_s5k4e1 is not set
-CONFIG_OV12830=y
+# CONFIG_OV12830 is not set
 # CONFIG_MSM_V4L2_VIDEO_OVERLAY_DEVICE is not set
 CONFIG_MSMB_JPEG=y
 CONFIG_MSM_VIDC_V4L2=y
