--- a/arch/arm/configs/dior_custom_defconfig
+++ b/arch/arm/configs/dior_custom_defconfig
@@ -93,7 +93,7 @@ CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
 CONFIG_LOG_BUF_SHIFT=21
 CONFIG_CGROUPS=y
-CONFIG_CGROUP_DEBUG=y
+# CONFIG_CGROUP_DEBUG is not set
 CONFIG_CGROUP_FREEZER=y
 # CONFIG_CGROUP_DEVICE is not set
 # CONFIG_CPUSETS is not set
@@ -466,7 +466,7 @@ CONFIG_IOMMU_API=y
 CONFIG_MSM_GPIOMUX=y
 CONFIG_MSM_NATIVE_RESTART=y
 CONFIG_MSM_PM=y
-# CONFIG_MSM_EVENT_TIMER is not set
+CONFIG_MSM_EVENT_TIMER=y
 CONFIG_MSM_BUS_SCALING=y
 # CONFIG_MSM_BUS_RPM_MULTI_TIER_ENABLED is not set
 CONFIG_MSM_WATCHDOG_V2=y
@@ -1655,9 +1655,9 @@ CONFIG_MXT_PLUGIN_SUPPORT=y
 # CONFIG_TOUCHSCREEN_DOUBLETAP2WAKE is not set
 # CONFIG_TOUCHSCREEN_PREVENT_SLEEP is not set
 CONFIG_STATE_NOTIFIER=y
-# CONFIG_GT9XX_TOUCHPANEL_DRIVER=y
-# CONFIG_GT9XX_TOUCHPANEL_UPDATE=y
-# CONFIG_GT9XX_TOUCHPANEL_DEBUG=y
+# CONFIG_GT9XX_TOUCHPANEL_DRIVER
+# CONFIG_GT9XX_TOUCHPANEL_UPDATE
+# CONFIG_GT9XX_TOUCHPANEL_DEBUG
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_BMA150 is not set
@@ -3447,7 +3447,7 @@ CONFIG_DEBUG_KERNEL=y
 # CONFIG_LOCKUP_DETECTOR is not set
 # CONFIG_HARDLOCKUP_DETECTOR is not set
 # CONFIG_DETECT_HUNG_TASK is not set
-CONFIG_SCHED_DEBUG=y
+# CONFIG_SCHED_DEBUG is not set
 # CONFIG_SYSRQ_SCHED_DEBUG is not set
 CONFIG_SCHEDSTATS=y
 CONFIG_TIMER_STATS=y
