--- a/arch/arm/boot/dts/msm8226.dtsi
+++ b/arch/arm/boot/dts/msm8226.dtsi
@@ -1020,6 +1020,7 @@
 		qcom,i2c-src-freq = <19200000>;
 		qcom,sda-gpio = <&msmgpio 18 0>;
 		qcom,scl-gpio = <&msmgpio 19 0>;
+		qcom,master-id = <86>;
 	};
 
 	i2c@f9928000 { /* BLSP1 QUP6 */
@@ -1035,6 +1036,7 @@
                 qcom,i2c-src-freq = <19200000>;
                 qcom,sda-gpio = <&msmgpio 22 0>;
                 qcom,scl-gpio = <&msmgpio 23 0>;
+                qcom,master-id = <86>;
         };
 
         qcom,clock-a7@f9011050 {
